# SoftRender

RayTracing/Whitted-Style Ray Tracing/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Vector.hpp
RayTracing/global_illumination/: CMakeLists.txt
RayTracing/global_illumination/include/: Scene.hpp
RayTracing/global_illumination/src/: BVH.cpp  Renderer.cpp  Scene.cpp
SoftwareRasterizer/: main.cpp  rasterizer.cpp
